--- a/front/src/app/globals.css
+++ b/front/src/app/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
+  --background: #171717;
   --foreground: #171717;
 }
 
@@ -14,13 +14,21 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #171717;
     --foreground: #ededed;
   }
 }
 
 body {
   background: var(--background);
+  background-image: radial-gradient(#272727 1px, transparent 0);
+  background-size: 40px 40px;
+  background-position: -19px -19px;
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+::selection {
+  background-color: #ec4899; 
+  color: white; 
 }
